# threedy

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: demo.rs  input_state.rs  lib.rs  main.rs  polytopes.rs
