[package]
name = "threedy"
version = "0.1.0"
authors = ["Anton Barkovsky <anton@swarmer.me>"]

[dependencies]
env_logger = "0.5"
log = "0.4"
ndarray = "0.11.2"
piston = "0.36.0"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.52.0"
piston_window = "0.77.0"
pistoncore-glutin_window = "0.45.0"
pistoncore-input = "0.20.0"
